--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
 
-    <string name="app_name">Color Schemer</string>
-    <string name="hello_world">Hello Michael!!</string>
+    <string name="app_name">colorSchemer</string>
+    <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_main">Color Schemer</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="display_s_the_users_image_selection">Display\'s the users image selection</string>
+    <string name="get_your_picture">Get Your Picture</string>
 
 </resources>
